# oft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
C/: Makefile  annotation_test.c  build_wrapper.sh  llvm_analysis_funcs.c  make_with_different_llvm.sh  make_with_llvm_7.sh  minimal.c  minimal_mpi.c  nompi_scale_test.c  scale_test.c  scale_test.h  scale_test_aux.c
F/: Makefile  allocate_test.f90  annotate_test.f90  build_wrapper.sh  c_interface.c  llvm_analysis_funcs.f90  make_with_llvm_7.sh  scale_module.f90  scale_test.f90  scale_test_nompi.f90  set_module.f90  use_module.f90
OverflowTool/: .gitignore  README.md
OverflowTool/include/OverflowTool/: ScaleGraph.hpp
OverflowTool/include/OverflowTool/Analysis/: ScaleOverflowIntegerDetection.hpp
OverflowTool/lib/: ScaleGraph.cpp
OverflowTool/lib/Analysis/Passes/: InstCountPass.cpp
OverflowTool/lib/Transform/: OverflowInstrumentation.cpp
OverflowTool/tests/: CMakeLists.txt
OverflowTool/tests/regression/: annotation_test.c  mixed_int_sizes_operation.c  pass_by_reference.c  pointer_calc.c
OverflowTool/tests/unit/: CMakeLists.txt
include/OverflowTool/Analysis/: ManualAnnotationSelection.hpp
lib/Analysis/: ManualAnnotationSelection.cpp  ScaleOverflowIntegerDetection.cpp  ScaleVariableTracing.cpp
lib/Analysis/Passes/: ScaleVariableTracingPass.cpp
lib/PassSupport/: Passes.def  RegisterPasses.cpp
lib/Transform/Passes/: OverflowInstrumentationPass.cpp
llvm/OverflowTool/: .clang-format  .cmake-format.yaml  CMakeLists.txt
llvm/OverflowTool/include/OverflowTool/: Debug.hpp  ManualAnnotationSelection.hpp  ManualAnnotationSelector.hpp  ScaleGraph.hpp  Util.hpp  UtilFuncs.hpp
llvm/OverflowTool/include/OverflowTool/Analysis/: LibraryScaleVariableDetection.hpp  ManualAnnotationSelection.hpp  ScaleOverflowIntegerDetection.hpp  ScaleVariableTracing.hpp
llvm/OverflowTool/include/OverflowTool/Analysis/Passes/: InstCountPass.hpp  LibraryScaleVariableDetectionPass.hpp  ManualAnnotationSelectionPass.hpp  ScaleOverflowIntegerDetectionPass.hpp  ScaleVariableTracingPass.hpp
llvm/OverflowTool/include/OverflowTool/Passes/: ManualAnnotationSelectionPass.hpp  ManualAnnotationSelectorPass.hpp
llvm/OverflowTool/include/OverflowTool/Transform/: OverflowInstrumentation.hpp
llvm/OverflowTool/include/OverflowTool/Transform/Passes/: OverflowInstrumentationPass.hpp
llvm/OverflowTool/include/OverflowTracking/: OverflowTracking.hpp  UtilFuncs.hpp
llvm/OverflowTool/include/OverflowTracking/Analysis/: LibraryScaleVariableDetection.hpp  ScaleOverflowIntegerDetection.hpp  ScaleVariableTracing.hpp
llvm/OverflowTool/include/OverflowTracking/Analysis/Passes/: LibraryScaleVariableDetectionPass.hpp  ScaleOverflowIntegerDetectionPass.hpp  ScaleVariableTracingPass.hpp
llvm/OverflowTool/include/OverflowTracking/Transform/: OverflowTracking.hpp
llvm/OverflowTool/include/OverflowTracking/Transform/Passes/: OverflowTrackingPass.hpp
llvm/OverflowTool/lib/: Debug.cpp  ScaleGraph.cpp  UtilFuncs.cpp
llvm/OverflowTool/lib/Analysis/: LibraryScaleVariableDetection.cpp  ManualAnnotationSelection.cpp  ManualAnnotationSelector.cpp  OverflowTracking.cpp  ScaleOverflowIntegerDetection.cpp  ScaleVariableTracing.cpp
llvm/OverflowTool/lib/Analysis/Passes/: LibraryScaleVariableDetectionPass.cpp  ManualAnnotationSelectionPass.cpp  ManualAnnotationSelectorPass.cpp  ScaleOverflowIntegerDetectionPass.cpp  ScaleVariableTracingPass.cpp
llvm/OverflowTool/lib/PassSupport/: PassCommandLineOptions.cpp  Passes.def  RegisterPasses.cpp
llvm/OverflowTool/lib/Passes/: PassCommandLineOptions.cpp
llvm/OverflowTool/lib/Transform/: OverflowInstrumentation.cpp  OverflowTracking.cpp
llvm/OverflowTool/lib/Transform/Passes/: OverflowInstrumentationPass.cpp  OverflowTrackingPass.cpp
llvm/OverflowTool/runtime/: CMakeLists.txt
llvm/OverflowTool/runtime/src/: oft_mark.c
llvm/OverflowTool/share/config/: linux_libc_io.cfg  linux_mpi.cfg
llvm/OverflowTool/tests/: .clang-format  CMakeLists.txt
llvm/OverflowTool/tests/regression/: CMakeLists.txt  allocate_dummy_test.f90  allocate_test.f90  annotation_test.c  annotation_test.f90  argv_input.c  array_access.c  c_io_annotation.c  direct_overflow.c  do_follow_return.c  dont_follow_return.c  double_scale_var.c  follow_gep_two_equal.c  global_common_test.f90  global_test.f90  indirect_array_access.c  indirect_overflow.c  indirect_overflow.f90  intermediate_calc.c  lit.cfg.in  malloc_test.f90  module_test.f90  mpi_library_call.c  mpi_library_call.f90  pass_by_value.c  pointer_calc.c  simple_global_test.c  simple_struct_test.c  struct_test.c
llvm/OverflowTool/tests/unit/: CMakeLists.txt  ManualAnnotationTest.cpp  UnitTestUtils.hpp  UnitTestsMain.cpp
llvm/OverflowTool/tests/unittests/: CMakeLists.txt  test.cpp
llvm/OverflowTool/utils/scripts/run/: check_marked_lines.in  run-oft-annotate.sh.in  run-oft-manual-annot-sel-print-config.sh.in  run-oft-manual-annot-sel-print.sh.in  run-oft-manual-annot-sel.sh.in  run-oft-trace.sh.in  run-oft.py.in  run-ovt-manual-annot-sel.sh.in
llvm/SDCManualAnnotation/: CMakeLists.txt
llvm/SDCManualAnnotation/lib/Analysis/: ManualAnnotationSelector.cpp
llvm/attic/: check_clang_format.sh  mssaPrintFuncs.cpp  wipFuncs.cpp
llvm/attic/O2_flag_subset_exploration/: comment_out_nth.sh  optlvl2_custom.sh  trimmed_flags_archer_opt_O2.txt  try_many.sh  uncomment_nth.sh
llvm/attic/lib/Transforms/: CMakeLists.txt
llvm/lib/Analysis/: OverflowTracking.cpp
runtime/src/: instrumentation_functions.c  oft_mark.c
tests/regression/: allocate_dummy_test.f90  allocate_test.f90  annotation_test.f90  argv_input.c  c_io_annotation.c  direct_overflow.c  do_follow_return_indirect.c  dont_follow_return.c  double_func_input.c  follow_gep_two_distinct.c  lit.cfg.in  malloc_test.f90  module_test.f90
tests/unit/: ManualAnnotationTest.cpp  UnitTestUtils.hpp
utils/scripts/: optlvl2_custom.sh  parse_overflow_pass_output.py
utils/scripts/misc/: install_binutils.sh  install_llvm_flang.sh  install_openmpi4.sh
utils/scripts/run/: print-functions.sh
(+5 files in other folders)
